Fix layout on mobile

--- a/static/style.css
+++ b/static/style.css
@@ -44,7 +44,7 @@ html {
   padding-top: 20%;
   padding-left: 7%;
   text-align: left;
-  grid-column: 1 / 12;
+  grid-column: 1 / 13;
   grid-row: 2;
 }
 
@@ -65,7 +65,7 @@ html {
 }
 
 .pull-left {
-  grid-column: 1 / 12;
+  grid-column: 1 / 13;
   grid-row: 1;
 }
 
@@ -75,8 +75,6 @@ html {
 
 .content {
   text-align: left;
-  margin: 0 auto;
-  padding: 0 3rem;
 }
 
 @media only screen and (min-width: 1080px) {
